[REFACTORING] user_func for ext_localconf.php and ext_tables.php / fix for flashMessages

--- a/Resources/Private/Templates/Step/Index.html
+++ b/Resources/Private/Templates/Step/Index.html
@@ -42,7 +42,7 @@
 		</div>
 		<section>
 			<div class="container" id="tx-rkwwepstra-main-content">
-				<f:flashMessages renderMode="div" />
+				<f:render partial="FlashMessages" arguments="{_all}" />
 				<f:format.raw>{content}</f:format.raw>
 			</div>
 		</section>
