[FIX] Fix for formating of privacy partial in TYPO3 8.7

--- a/Resources/Private/Partials/Login/RegisterForm.html
+++ b/Resources/Private/Partials/Login/RegisterForm.html
@@ -30,7 +30,7 @@
 		<f:form.checkbox id="privacy2" name="privacy" value="1" />
 		<label for="privacy2">
 			<span>
-				<rkwRegistration:privacyText textVersion="registration" />
+				<f:format.raw><rkwRegistration:privacyText textVersion="registration" /></f:format.raw>
 			</span>
 		</label>
 	</p>
