[FIX] Removing unnecessary format.html.raw for privacy-text

--- a/Resources/Private/Partials/Login/LoginForm.html
+++ b/Resources/Private/Partials/Login/LoginForm.html
@@ -25,7 +25,7 @@
 		<f:form.checkbox id="privacy" name="privacy" value="1" />
 		<label for="privacy">
 			<span>
-				<f:format.raw><rkwRegistration:privacyText textVersion="registration"/><f:format.raw>
+				<rkwRegistration:privacyText textVersion="registration"/>
 			</span>
 		</label>
 	</p>
