--- a/Resources/Private/Templates/Step/LoginChoice.html
+++ b/Resources/Private/Templates/Step/LoginChoice.html
@@ -46,7 +46,7 @@
                         <f:form.checkbox id="privacyAnonymous" name="privacy" value="1" />
                         <label for="privacyAnonymous">
                             <span>
-								<f:format.raw><rkwRegistration:privacyText textVersion="registration" /></f:format.raw>
+								<rkwRegistration:privacyText textVersion="registration" />
                             </span>
                         </label>
                     </p>
