[FEATURE] Fix for override of header [REFACTORING] refactoring for TYPO3 8.7

--- a/Resources/Private/Partials/Print/Header.html
+++ b/Resources/Private/Partials/Print/Header.html
@@ -1,9 +1,5 @@
 <header class="page-header">
 	<div class="container">
-		<p class="header-logo">
-			<a href="./">
-				<f:image width="195" height="35" src="fileadmin/templates/wepstra/images/logo-black.svg" />
-			</a>
-		</p>
+		<f:render partial="Print/Logo" arguments="{_all}" />
 	</div>
 </header>
