--- a/Resources/Private/Partials/Step/Header.html
+++ b/Resources/Private/Partials/Step/Header.html
@@ -1,10 +1,8 @@
 <header class="page-header">
 	<div class="container">
-		<p class="header-logo">
-			<a href="https://www.rkw-kompetenzzentrum.de" target="_blank">
-				<img src="fileadmin/templates/wepstra/images/logo.svg" alt="Logo" width="195" height="35">
-			</a>
-		</p>
+
+		<f:render partial="Step/Logo" arguments="{_all}" />
+
 		<nav class="menu">
 			<p class="menu-opener icon-burger">
 				<f:translate key="tx_rkwwepstra_fluid_header.menu" extensionName="RkwWepstra" />
