--- a/Resources/Private/Partials/Step/Navigation.html
+++ b/Resources/Private/Partials/Step/Navigation.html
@@ -9,7 +9,7 @@
 		<li class="{f:if(condition:'{step} == 0',then:'active',else:'')}">
 			<f:link.action action="step0" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step0' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step0' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -18,7 +18,7 @@
 		<li class="{f:if(condition:'{step} == 1',then:'active',else:'')}">
 			<f:link.action action="step1" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step1' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step1' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -27,7 +27,7 @@
 		<li class="{f:if(condition:'{step} == 2',then:'active',else:'')}">
 			<f:link.action action="step2" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step2' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step2' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -36,7 +36,7 @@
 		<li class="{f:if(condition:'{step} == 3',then:'active',else:'')}">
 			<f:link.action action="step3" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step3' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step3' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -45,7 +45,7 @@
 		<li class="{f:if(condition:'{step} == 4',then:'active',else:'')}">
 			<f:link.action action="step4" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step4' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step4' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -54,7 +54,7 @@
 		<li class="{f:if(condition:'{step} == 5',then:'active',else:'')}">
 			<f:link.action action="step5" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step5' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step5' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
@@ -63,7 +63,7 @@
 		<li class="{f:if(condition:'{step} == 6',then:'active',else:'')}">
 			<f:link.action action="step6" controller="Step" extensionName="RkwWepstra" arguments="{wepstraUid: wepstra.uid}" noCacheHash="true" class="ajax" >
 				<span>
-					<f:translate key='tx_rkwwepstra_fluid_navigation.step6' extensionName='RkwWepstra' />
+					<f:format.raw><f:translate key='tx_rkwwepstra_fluid_navigation.step6' extensionName='RkwWepstra' /></f:format.raw>
 				</span>
 			</f:link.action>
 		</li>
