[REWORK] Rework for TYPO3 9.5

--- a/Resources/Private/Templates/Ajax/Step/Step5sub5.html
+++ b/Resources/Private/Templates/Ajax/Step/Step5sub5.html
@@ -28,7 +28,7 @@
 
 			</div>
 
-			<!-- @TODO: In den vorigen Seiten hat sich diese Liste durch übergebene Daten automatisch ergeben. Prüfen!-->
+			<!-- @todo In den vorigen Seiten hat sich diese Liste durch übergebene Daten automatisch ergeben. Prüfen!-->
 
 			<ul class="participants-list small" data-intro="<f:translate key='tx_rkwwepstra_fluid_step5sub5_guided.list' extensionName='RkwWepstra' />" data-step="3">
 				<li class="title"><f:translate key="tx_rkwwepstra_fluid_step6.jobfamilies" extensionName="RkwWepstra" /></li>
