--- a/Resources/Private/Templates/Step/LoginChoice.html
+++ b/Resources/Private/Templates/Step/LoginChoice.html
@@ -1,4 +1,3 @@
-{namespace rkwRegistration=RKW\RkwRegistration\ViewHelpers}
 <div class="account-modal" id="account-modal">
     <f:if condition="{errors}">
         <div class="typo3-messages">
@@ -8,57 +7,28 @@
         </div>
     </f:if>
 
-	<div class="account-container">
 		<div class="account-login-register">
-
 			<!-- login -->
 			<div class="account-login" id="login-part">
-				<f:render partial="Login/LoginForm" arguments="{_all}" />
-			</div>
+                <h2><u>Login "WePstra"-App</u></h2>
+                <h2 data-tooltip="<f:translate key='tx_rkwwepstra_fluid_login_tooltip.anonymous' extensionName='RkwWepstra' />">
+                    <f:translate key="tx_rkwwepstra_fluid_login.without_login" extensionName='RkwWepstra' />
+                </h2>
+                <div id="anonymous-error-part">
+                    <f:if condition="{errorMessage}">
+                        <p class="error">{errorMessage}</p>
+                    </f:if>
+                </div>
+                <f:form action="loginAnonymous" controller="Step" extensionName="RkwWepstra" class="ajax" >
 
-			<!-- register -->
-			<div class="account-register" id="register-part">
-				<h2 data-tooltip="<f:translate key='tx_rkwwepstra_fluid_login_tooltip.register' extensionName='RkwWepstra' />">
-					<f:translate key="tx_rkwwepstra_fluid_login.create_account" extensionName='RkwWepstra' />
-				</h2>
-				<p>
-					<f:link.action controller="Step" action="loginRegisterForm" extensionName="RkwWepstra" class="ajax button secondary" >
-						<f:translate key="tx_rkwwepstra_fluid_login.register" extensionName='RkwWepstra' />
-					</f:link.action>
-				</p>
-			</div>
-		</div>
-
-		<!-- anonymous -->
-		<div class="account-anonymously">
-			<h2 data-tooltip="<f:translate key='tx_rkwwepstra_fluid_login_tooltip.anonymous' extensionName='RkwWepstra' />">
-				<f:translate key="tx_rkwwepstra_fluid_login.without_login" extensionName='RkwWepstra' />
-			</h2>
-			<div id="anonymous-error-part">
-				<f:if condition="{errorMessage}">
-					<p class="error">{errorMessage}</p>
-				</f:if>
-			</div>
-			<f:form action="loginAnonymous" controller="Step" extensionName="RkwWepstra" class="ajax" >
-
-                <f:comment>
-                    <p class="field">
-                        <f:form.checkbox id="privacyAnonymous" name="privacy" value="1" />
-                        <label for="privacyAnonymous">
-                            <span>
-								<rkwRegistration:privacyText textVersion="registration" />
-                            </span>
-                        </label>
+                    <p class="button-container">
+                        <f:form.button class="button secondary">
+                            <f:translate key="tx_rkwwepstra_fluid_login.anonymous" extensionName='RkwWepstra' />
+                        </f:form.button>
                     </p>
-                </f:comment>
-				<p class="button-container">
-					<f:form.button class="button secondary">
-						<f:translate key="tx_rkwwepstra_fluid_login.anonymous" extensionName='RkwWepstra' />
-					</f:form.button>
-				</p>
-			</f:form>
+                </f:form>
+			</div>
 		</div>
-	</div>
 
 </div>
 
